Make frame backgrounds transparent
Changed background color to transparent for various frame elements.

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             position: absolute;
             top: min(12vw, 80px);
             left: min(4vw, 25px);
-            background: rgba(28, 28, 30, 0.5);
+            background: transparent; /* 帧号显示背景改为透明 */
             backdrop-filter: blur(20px);
             padding: min(3vw, 16px) min(4vw, 22px);
             border-radius: min(2vw, 12px);
@@ -351,7 +351,7 @@
             position: absolute;
             bottom: min(25vw, 200px);
             left: min(4vw, 25px);
-            background: rgba(28, 28, 30, 0.5);
+            background: transparent; /* 帧控制项背景改为透明 */
             backdrop-filter: blur(30px);
             border-radius: min(4vw, 20px);
             padding: min(3vw, 15px);
@@ -393,7 +393,7 @@
             bottom: min(40vw, 320px);
             left: 50%;
             transform: translateX(-50%);
-            background: rgba(28, 28, 30, 0.5);
+            background: transparent; /* 长按控制背景改为透明 */
             backdrop-filter: blur(30px);
             border-radius: min(4vw, 20px);
             padding: min(3vw, 15px);
